@@ -57,7 +57,10 @@
     <div class="ep_tm_footer ep_noprint">
   <epc:phrase ref="ruler" />
   <hr class="ep_tm_last"/>
-  <a href="{$config{base_url}}/contact.html">Contact Information</a>
+<div style="float: right; margin-left: 1em"><a href="http://eprints.org/software/"><img src="/images/eprintslogo.gif" border="0"/></a></div>
+<div style="font-size: 80%;">
+<div><epc:phrase ref="archive_name" /> is powered by <em><a href="http://eprints.org/software/">EPrints 3</a></em> which is developed by the <a href="http://www.ecs.soton.ac.uk/">School of Electronics and Computer Science</a> at the University of Southampton. <a href="/eprints/">More information and software credits</a>.</div>
+</div>
     </div>
   </body>
 </html>
